# path-jail-python

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/path_jail/: __init__.py  __init__.pyi
src/: lib.rs
tests/: test_jail.py
