[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "path-jail"
version = "0.1.0"
description = "Secure filesystem sandbox. Restricts paths to a root directory, preventing traversal attacks."
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
keywords = ["security", "filesystem", "sandbox", "path", "traversal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/aimable100/path-jail-python"
Repository = "https://github.com/aimable100/path-jail-python"
Documentation = "https://github.com/aimable100/path-jail-python#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "path_jail"

