[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "path-jail"
version = "0.2.0"
description = "Secure filesystem sandbox. Restricts paths to a root directory, preventing traversal attacks."
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
keywords = ["security", "filesystem", "sandbox", "path", "traversal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://tenuo.dev"
Repository = "https://github.com/tenuo-ai/path-jail-python"
Documentation = "https://github.com/tenuo-ai/path-jail-python#readme"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "mypy>=1.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "path_jail"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

